upload till mainvisual

--- a/index.html
+++ b/index.html
@@ -5,19 +5,28 @@
   <title>Profile</title>
   <meta name="description" content="テキストテキストテキストテキスト">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="shortcut icon" href="/img/favicon.ico">
-  <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <link rel="stylesheet" href="/CSS/style.css">
+  <link rel="shortcut icon" href="img/favicon.ico">
+  <link rel="stylesheet" href="CSS/style.css">
 </head>
 
 <body>
     <!--ヘッダー-->
     <header id="header" class="wrapper">
+      <h1 class="site-title">
+        <a href="index.html"><img src="img/logo.svg" alt="profile"></a>
+      </h1>
+      <nav>
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#photos">Photos</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
       <!--メインビジュアル-->
       <div id="mainvisual">
+        <img src="img/main.JPG" alt="mainvisual">
       </div>
 
       <!--Aboutセクション-->
