--- a/index.html
+++ b/index.html
@@ -31,17 +31,52 @@
 
       <!--Aboutセクション-->
       <section id="about" class="wrapper">
+        <h2 class="section-title">About</h2>
+        <div class="content">
+          <img src="img/me.JPG" alt="profilepicture">
+          <div class="text">
+            <h3 class="content-title">Yuki.Y</h3>
+            <p>
+              はじめましてこんにちは<br>
+              今日は天気がいいので写真を撮りに行きたいですね<br>
+              おいしいカレーも食べたいし、ねこにも懐かれたい
+            </p>
+          </div>
+        </div>
       </section>
 
       <!--Photosセクション-->
       <section id="photos" class="wrapper">
-
+        <h2 class="section-title">Photos</h2>
+        <ul>
+          <li>
+            <img src="img/photo1.JPG" alt="cat">
+            <h3 class="content-title">ねこ</h3>
+            <p>穴に引きこもって出てこなかった当初が<br>
+              嘘のようなヘソ天
+            </p>
+          </li>
+          <li>
+            <img src="img/photo2.JPG" alt="cherryblossum">
+            <h3 class="content-title">花見</h3>
+            <p>春の日でした<br>
+              車で遠くまででかけて<br>
+              窓の外に目をやると<br>
+              川沿いにきれいな桜が
+            </p>
+          </li>
+          <li>
+            <img src="img/photo3.JPG" alt="cat">
+            <h3 class="content-title">トンネル</h3>
+            <p>何の変哲もない通学路です</p>
+          </li>
+        </ul>
       </section>
     </main>
 
     <!--フッター-->
     <footer id="footer">
-
+      <p>&copy; 2021 Profile</p>
     </footer>
 </body>
 </html>
